src/sass/myservice-pages-authenticated-home.scss
/**********************************
	Specific styling for authenticated home page
**********************************/
.hero-auth {
	padding: 0.5em;
	h1 {
		font-weight: 300;
		line-height: 1em;
		font-size: 1.6rem;
		margin: 0.5em 0 0.5em 0;
		padding-top: 0;
	}
	p {
		color: black;
		line-height: 1.1em;
	}
}


.text-fullwidth {
	min-width: 100%;
}

.card {
	margin-bottom: 1em;
    background: $white;
	border: 0px solid $gray;
	margin: 0 0 2em 0;
	padding: 0 0 2em 0;
	position: relative;
	font-weight: bold;
	text-align: center;
	-webkit-border-radius: 6px;
	border-radius: 6px;
	min-height: 200px;
	-webkit-box-shadow: 1px 3px 8px 1px rgba(0,0,0,0.25);
	box-shadow: 1px 3px 8px 1px rgba(0,0,0,0.25);
	h3 {
		text-transform: uppercase;
		padding: 0 1em;
		font-size: 1rem;
		line-height: 1.2;
	}
	p {
	    border-top: 1px solid $gray-light;
		padding-top: 0.5em;
		font-weight: normal;
		display: inline-block;
		width: 85%;
		margin: 0;
	}
	.card-status-icon {
		background: $orange url(../images/ico-pending-white.svg) no-repeat 50% 0;
		border-top: 10px solid $orange;
		background-size: 35px 35px;
		-webkit-border-radius: 6px 6px 0px 0px;
		border-radius: 6px 6px 0px 0px;
		height: 45px;
		width: 100%;
		margin-bottom: 0;
		display: inline-block;
	}
	.card-status-icon-submitted {
		background: $blue-mid url(../images/ico-tick-white.svg) no-repeat 50% 0;
		background-size: 35px 35px;
		-webkit-border-radius: 6px 6px 0px 0px;
		border-radius: 6px 6px 0px 0px;
		border-top: 10px solid $blue-mid;
	}
	.card-status-icon-done {
		background: $green url(../images/ico-tick-white.svg) no-repeat 50% 0;
		background-size: 35px 35px;
		-webkit-border-radius: 6px 6px 0px 0px;
		border-radius: 6px 6px 0px 0px;
		border-top: 10px solid $green;
	}
	.card-status {
		margin-bottom: 0.5em;
	}
	// Prevent wrapping of resume and delete buttons
	.buttons {
		white-space: nowrap;
	}

	&.card-transition-out {
		opacity: 0;
		transition: opacity 1s 0s;
	}
	&.card-shrink {
		opacity: 0;
		width: 0%;
		transition: width 1s 0s;
	}
}
// Message for non continuous full time serving members
.claim-disclaimer {
	margin: 0.75em 0 0 0 !important;
	line-height: 1;
}

@media only print, screen and (min-width: $medium-handheld) {
	.card {
		display: inline-block;
		width: 30%;
		margin-right: 2%;
		min-height: 275px;
		float: left;
	}
	.lower-details {
		position: absolute;
		bottom: 1em;
		left: 50%;
		width: 160px;
    	margin-left: -80px;
  	}
}
@media only screen and (min-width: $medium-tablet) {
	.card {
		display: inline-block;
		width: 22%;
		min-height: 275px;
	}
}


// Add cover card

.card-add-cover {
	background: white url(../images/ico-add-blue.svg) no-repeat 50% 4em;
	background-size: 60px 60px;
	display: block;
	border: none;
	color: $blue;
	.lower-details {
		position: absolute;
		bottom: 3em;
		left: 50%;
		width: 160px;
    	margin-left: -80px;
		font-size: 1.4rem;
	}
}
@media only screen and (min-width: $medium-handheld) {
	.card-add-cover {
		background: white url(../images/ico-add-blue.svg) no-repeat 50% 5.5em;
		background-size: 60px 60px;
		.lower-details {
			bottom: 4.5em;
		}
	}
}


// Boxed content for page with no existing claims

.boxed {
	padding: 0.5em 2em;
	border: 1px solid $blue-light;
	margin-bottom: 2em;
	border-radius: 6px;
	.add-cover-btn {
		background: $blue url(../images/ico-add-white.svg) no-repeat 0.8em 0.8em;
		background-size: 25px 25px;
		padding: 0.75em 1em 0.75em 50px;
		font-size: 1.2rem;
		margin-bottom: 1em;
	    &:focus,
	    &:hover {
	    	background-color: $blue-dark;
	    }
	}
}

